[package]
name = "russhr"
version = "0.1.0"
authors = ["ec0 <ec0@ec0.io>"]
edition = "2018"

[dependencies]
thrussh = "0.32.7"
thrussh-keys = "0.20.3"
clap = "2.3.3"
indicatif = "0.15.0"
futures = "0.3"
anyhow = "1.0"
tokio-stream = "0.1.5"

[dependencies.tokio]
version = "1.5.0"
default-features = false
features = ["rt-multi-thread"]
